<resources>
    <string name="app_name">MyCaffe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_label">Добавити Інгредіент</string>
    <string name="add_case">Інгрідіент</string>
    <string name="empty">Попереднє поле не заповнене!</string>
    <string name="ingredient_1">Інгредіент 1</string>
    <string name="ingredient_2">Інгредіент 2</string>
    <string name="ingredient_3">Інгредіент 3</string>
    <string name="ingredient_4">Інгредіент 4</string>
    <string name="ingredient_5">Інгредіент 5</string>
    <string name="ingredient">Інгредіент</string>
    <string name="ingredient_6">Інгредіент 6</string>
    <string name="ingredient_7">Інгредіент 7</string>
    <string name="ingredient_8">Інгредіент 8</string>
    <string name="ingredient_9">Інгредіент 9</string>
    <string name="ingredient_10">Інгредіент 10</string>
    <string name="back">Назад</string>
    <string name="finish">Готово</string>
    <string name="cant_be_empty">Немає інгредіентів!</string>
    <string name="meal_name">Назва страви</string>
    <string name="meal_price">Ціна страви</string>
    <string name="empty_name">Не вказано назву!</string>
    <string name="empty_price">Не вказано ціну</string>
</resources>
