<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
android:layout_width="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_ingredient_layout"
    android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView
        android:id="@+id/add_label"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_margin="@dimen/standard_padding"
        android:text="@string/add_label"
        android:textSize="@dimen/text_size"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/meal_name"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:layout_below="@id/add_label"
        android:hint="@string/meal_name"/>
    <EditText
        android:id="@+id/meal_price"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:layout_below="@id/meal_name"
        android:hint="@string/meal_price"/>
    <EditText
        android:id="@+id/ingredient_1"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:layout_below="@id/meal_price"
        android:hint="@string/ingredient_1"/>
    <EditText
        android:id="@+id/ingredient_2"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:layout_below="@id/ingredient_1"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/ingredient_2"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/ingredient_3"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:layout_below="@id/ingredient_2"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:visibility="gone"
        android:hint="@string/ingredient_3" />
    <EditText
        android:id="@+id/ingredient_4"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:layout_below="@id/ingredient_3"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:visibility="gone"
        android:hint="@string/ingredient_4" />
    <EditText
        android:id="@+id/ingredient_5"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:layout_below="@id/ingredient_4"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:visibility="gone"
        android:hint="@string/ingredient_5" />
    <EditText
        android:id="@+id/ingredient_6"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:inputType="text"
        android:layout_below="@id/ingredient_5"
        android:layout_centerHorizontal="true"
        android:hint="@string/ingredient_6"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/ingredient_7"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:layout_below="@id/ingredient_6"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/ingredient_7"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/ingredient_8"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:layout_below="@id/ingredient_7"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:visibility="gone"
        android:hint="@string/ingredient_8" />
    <EditText
        android:id="@+id/ingredient_9"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:layout_below="@id/ingredient_8"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:visibility="gone"
        android:hint="@string/ingredient_9" />
    <EditText
        android:id="@+id/ingredient_10"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/standard_height"
        android:layout_below="@id/ingredient_9"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:visibility="gone"
        android:hint="@string/ingredient_10" />
    <Button
        android:id="@+id/add_2"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_1"
        android:layout_centerHorizontal="true"
        style="@style/add_button"
        android:tag="add_2"
        android:onClick="addField"/>
    <Button
        android:id="@+id/add_3"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_2"
        android:layout_marginStart="@dimen/big_spacer"
        android:layout_marginLeft="@dimen/big_spacer"
        android:visibility="gone"
        style="@style/add_button"
        android:tag="add_3"
        android:onClick="addField"/>
    <Button
        android:id="@+id/add_4"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_3"
        android:layout_marginStart="@dimen/big_spacer"
        android:layout_marginLeft="@dimen/big_spacer"
        android:visibility="gone"
        style="@style/add_button"
        android:tag="add_4"
        android:onClick="addField"/>
    <Button
        android:id="@+id/add_5"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_4"
        android:layout_marginStart="@dimen/big_spacer"
        android:layout_marginLeft="@dimen/big_spacer"
        android:visibility="gone"
        style="@style/add_button"
        android:tag="add_5"
        android:onClick="addField"/>
    <Button
        android:id="@+id/add_6"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_5"
        android:layout_marginStart="@dimen/big_spacer"
        android:layout_marginLeft="@dimen/big_spacer"
        style="@style/add_button"
        android:tag="add_6"
        android:onClick="addField"
        android:visibility="gone"/>
    <Button
        android:id="@+id/add_7"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_6"
        android:layout_marginStart="@dimen/big_spacer"
        android:layout_marginLeft="@dimen/big_spacer"
        android:visibility="gone"
        style="@style/add_button"
        android:tag="add_7"
        android:onClick="addField"/>
    <Button
        android:id="@+id/add_8"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_7"
        android:layout_marginStart="@dimen/big_spacer"
        android:layout_marginLeft="@dimen/big_spacer"
        android:visibility="gone"
        style="@style/add_button"
        android:tag="add_8"
        android:onClick="addField"/>
    <Button
        android:id="@+id/add_9"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_8"
        android:layout_marginStart="@dimen/big_spacer"
        android:layout_marginLeft="@dimen/big_spacer"
        android:visibility="gone"
        style="@style/add_button"
        android:tag="add_9"
        android:onClick="addField"/>
    <Button
        android:id="@+id/add_10"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_9"
        android:layout_marginStart="@dimen/big_spacer"
        android:layout_marginLeft="@dimen/big_spacer"
        android:visibility="gone"
        style="@style/add_button"
        android:tag="add_10"
        android:onClick="addField"/>
    <Button
        android:id="@+id/minus_2"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_2"
        android:visibility="gone"
        android:layout_toEndOf="@id/add_3"
        android:layout_toRightOf="@id/add_3"
        style="@style/minus_button"
        android:tag="minus_2"
        android:onClick="addField"/>
    <Button
        android:id="@+id/minus_3"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_3"
        android:visibility="gone"
        android:layout_toEndOf="@id/add_4"
        android:layout_toRightOf="@id/add_4"
        style="@style/minus_button"
        android:tag="minus_3"
        android:onClick="addField"/>
    <Button
        android:id="@+id/minus_4"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_4"
        android:layout_toEndOf="@id/add_5"
        android:layout_toRightOf="@id/add_5"
        android:visibility="gone"
        style="@style/minus_button"
        android:tag="minus_4"
        android:onClick="addField"/>
    <Button
        android:id="@+id/minus_5"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_5"
        android:layout_toEndOf="@id/add_6"
        android:layout_toRightOf="@id/add_6"
        android:visibility="gone"
        style="@style/minus_button"
        android:tag="minus_5"
        android:onClick="addField"/>
    <Button
        android:id="@+id/minus_6"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_6"
        android:visibility="gone"
        android:layout_toEndOf="@id/add_7"
        android:layout_toRightOf="@id/add_7"
        style="@style/minus_button"
        android:tag="minus_6"
        android:onClick="addField"/>
    <Button
        android:id="@+id/minus_7"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_7"
        android:visibility="gone"
        android:layout_toEndOf="@id/add_8"
        android:layout_toRightOf="@id/add_8"
        style="@style/minus_button"
        android:tag="minus_7"
        android:onClick="addField"/>
    <Button
        android:id="@+id/minus_8"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_8"
        android:layout_toEndOf="@id/add_9"
        android:layout_toRightOf="@id/add_9"
        android:visibility="gone"
        style="@style/minus_button"
        android:tag="minus_8"
        android:onClick="addField"/>
    <Button
        android:id="@+id/minus_9"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_9"
        android:layout_toEndOf="@id/add_10"
        android:layout_toRightOf="@id/add_10"
        android:visibility="gone"
        style="@style/minus_button"
        android:tag="minus_9"
        android:onClick="addField"/>
    <Button
        android:id="@+id/minus_10"
        android:layout_width="@dimen/add_minus_button"
        android:layout_height="@dimen/add_minus_button"
        android:layout_below="@id/ingredient_10"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        style="@style/minus_button"
        android:tag="minus_10"
        android:onClick="addField"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minus_10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp">
        <Button
            android:id="@+id/back"
            android:layout_width="@dimen/small_button"
            android:layout_height="@dimen/standard_height"
            android:text="@string/back"/>
        <Button
            android:id="@+id/finish"
            android:layout_width="@dimen/small_button"
            android:layout_height="@dimen/standard_height"
            android:layout_toEndOf="@id/back"
            android:layout_toRightOf="@id/back"
            android:text="@string/finish"
            android:onClick="onFinish"/>
    </RelativeLayout>
</RelativeLayout>
</ScrollView>